Footer added, collapse fixed, article page OK

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,17 +1,17 @@
-body {
-    background-color: #cccccc;
-    font-family: arial, helvetica, sans-serif;
-}
+/*body {*/
+    /*background-color: #cccccc;*/
+    /*font-family: arial, helvetica, sans-serif;*/
+/*}*/
 
-.bookHeadline {
-    font-size: 12pt;
-    font-weight: bold;
-}
+/*.bookHeadline {*/
+    /*font-size: 12pt;*/
+    /*font-weight: bold;*/
+/*}*/
 
-.bookDescription {
-    font-size: 10pt;
-}
+/*.bookDescription {*/
+    /*font-size: 10pt;*/
+/*}*/
 
-label {
-    font-weight: bold;
-}
+/*label {*/
+    /*font-weight: bold;*/
+/*}*/
